[package]
authors = ["Brandon Dyer <brandondyer64@gmail.com>"]
description = "SDK for lotide"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "meztide"
repository = "https://github.com/ProjectHoot/meztide"
version = "0.12.0"

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
