[package]
authors = ["Brandon Dyer <brandondyer64@gmail.com>"]
description = "SDK for lotide"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "meztide"
repository = "https://github.com/ProjectHoot/meztide"
version = "0.12.3"

[dependencies]
reqwest = {version = "0.11", features = ["json"]}
secrecy = {version = "0.8.0", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.105"
smallstr = {version = "0.3.0", features = ["serde"]}

[dev-dependencies]
tokio = {version = "1.0", features = ["full"]}
